feat(admin): 添加管理员后台功能及UI组件

--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.38.5",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.294.0",
