--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.38.5",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "dotenv": "^17.2.3",
